--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
       rel="stylesheet"
     />
     <title>stands</title>
+    <style>
+      body {
+        font-family: "Work Sans", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
