--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,12 @@
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,500,600"
       rel="stylesheet"
+      type="text/css"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:600"
       rel="stylesheet"
+      type="text/css"
     />
     <title>stands</title>
     <style>
